# soop-autorec

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  db.py  main.py
app/models/: channel.py  dashboard.py  event_log.py  recording.py  settings.py
app/routers/: api_channels.py  api_events.py  api_recordings.py  api_relay.py  api_settings.py  api_system.py  ui.py
app/schemas/: channel.py
app/services/: filename_renderer.py  health.py  hls_relay.py  playback_url.py  poller.py  recorder.py  secrets.py  soop_probe.py
app/static/css/: common.css
app/templates/: channels.html  index.html
app/utils/: sanitize.py  time.py
