[project]
name = "soop-autorec"
version = "0.1.0"
description = "SOOP channel auto recording service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=46.0.6",
  "fastapi>=0.135.2",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic-settings>=2.13.1",
  "python-multipart>=0.0.22",
  "streamlink>=8.2.1",
  "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".uv-cache", ".venv", "__pycache__", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
